--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <!-- ************** 以下是头的部分，里面包括了样式style ************** -->
-
+<head>
+        <title>Guannan Mi</title>
+        <meta name="description" content="Guannan Mi | academic website">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    
+</head>
 <!-- ************** 以下是页眉的部分，里面包括了导航栏目 ************** -->
-
-</header>
-
 
 <!-- ************** 以下是主体body ************** -->  
 <body>
