--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
 
 <div>
-<p><img src="mi_pic.jpg" alt="mi_pic" class="responsive-img"></p>
+<p><img src="mi_pic.png" alt="mi_pic" class="responsive-img"></p>
 </div>
 
 <div>
 <p>
 <a href="about.html" target="_blank">About me</a>
 <a href="research.html" target="_blank">Research</a>
-<a href="file/mi_CV.pdf" target="_blank">My CV</a>
+<a href="mi_CV.pdf" target="_blank">My CV</a>
 </ul>
 </p>
 
