--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div style="text-align: left;">
 <p>∀x (x is welcome!)
   </p>
-<p>'Vx' means 'for all x.'
+<p>'∀x' means 'for all x.'
 <br>Heij! I am Guannan Mi. I am currently a master's student at <a href="https://www.illc.uva.nl" target="_blank">ILLC</a>, Amsterdam.
   </p>
 </div>
