--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 
 <div style="text-align: left;">
-<p>∀x (x is welcome!)
+<p>∀<i>x</i> (<i>x</i> is welcome!)
   </p>
-<p>'∀x' means 'for all x.'
+<p>'∀<i>x</i>' means 'for all <i>x</i>.'
 <br>Heij! I am Guannan Mi. I am currently a master's student at <a href="https://www.illc.uva.nl" target="_blank">ILLC</a>, Amsterdam.
   </p>
 </div>
