--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
 
         <style>
+        .large-text {
+            font-size: 36px; /* 设置较大的字体大小 */
+        }
         .container {
             display: flex;
             flex-direction: row;
@@ -33,7 +36,7 @@
 <body>
 
 <div style="text-align: left;">
-<p>∀<i>x</i> (<i>x</i> is welcome!)
+<p><span class="large-text">∀<i>x</i> (<i>x</i> is welcome!)</span>
   </p>
 <p>'∀<i>x</i>' means 'for all <i>x</i>.'
 <br>Heij! I am Guannan Mi. I am currently a master's student at <a href="https://www.illc.uva.nl" target="_blank">ILLC</a>, Amsterdam.
@@ -55,6 +58,7 @@
         </div>
     </div>
 
+       
       
 </body>
 
