--- a/foot.html
+++ b/foot.html
@@ -1,5 +1,5 @@
 <span style="font-weight: bold; font-family: georgia; font-size: 1.2em; color: #FFFFFF;">
 <center>
-© 2024 <a href="https://gnmi.github.io" target="_top" style="color: #FFFFFF; text-decoration: none;">Guannan Mi</a>
+© 2024 <a href="https://gnmi.github.io" target="_top" style="font-size: 26pt; color: #FFFFFF; text-decoration: none;">Guannan Mi</a>
 </center>
 </span>
