--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div style="text-align: left;">
 <p><span class="large-text">∀<i>x</i> (<i>x</i> is welcome!)</span>
   </p>
-<p>'∀<i>x</i>' means 'for all <i>x</i>.'
+<p>‘∀<i>x</i>’ means ‘for all <i>x</i>.’
 <br>Heij! I am Guannan Mi. I am currently a master's student at <a href="https://www.illc.uva.nl" target="_blank">ILLC</a>, Amsterdam.
   </p>
 </div>
@@ -51,8 +51,8 @@
         </div>
         <div class="right-column">
                 <p><a href="about.html" target="_blank">About me</a>
-                <br><a href="research.html" target="_blank">Research</a>
-                <br><a href="mi_CV.pdf" target="_blank">My CV</a>
+                <br><br><a href="research.html" target="_blank">Research</a>
+                <br><br><a href="mi_CV.pdf" target="_blank">My CV</a>
                 </ul>
                 </p>
         </div>
