--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             flex-direction: row;
         }
         .left-column {
-            flex: 1; /* 占据1/4宽度 */
-            padding: 30px;
+            flex: 1 1 25%; /* 占据1/4宽度 */
+            padding: 25px;
         }
         .right-column {
-            flex: 3; /* 占据3/4宽度 */
-            padding: 60px;
+            flex: 1 1 75%; /* 占据3/4宽度 */
+            padding: 50px;
         }
         .left-column img {
             width: 100%; /* 图片占据列的全部宽度 */
