--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         .container {
             display: flex;
             flex-direction: row;
+                width: 100%;
+                border: 1px solid black;
         }
         .left-column {
             flex: 1 1 25%; /* 占据1/4宽度 */
@@ -21,7 +23,7 @@
         }
         .right-column {
             flex: 1 1 75%; /* 占据3/4宽度 */
-            padding: 50px;
+            padding: 40px;
         }
         .left-column img {
             width: 100%; /* 图片占据列的全部宽度 */
