--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: flex;
             flex-direction: row;
                 width: 100%;
-                border: 1px solid black;
+                border: 1px dotted white;
         }
         .left-column {
             flex: 1 1 50%; /* 占据1/2宽度 */
