--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="container" style="text-align: left;">
         <div class="left-column">
-            <img src="mi_pic.png" alt="mi_pic" class="responsive-img">
+            <img src="mi_pic.png" alt="mi_pic" class="responsive-img" width=130px>
         </div>
         <div class="right-column">
                 <p><a href="about.html" target="_blank">About me</a>
