--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 border: 1px dotted white;
         }
         .left-column {
-            flex: 1 1 50%; /* 占据1/2宽度 */
+            flex: 1; /* 占据1/2宽度 */
             padding: 25px;
         }
         .right-column {
-            flex: 1 1 50%; /* 占据1/2宽度 */
+            flex: 1; /* 占据1/2宽度 */
             padding: 40px;
         }
         .left-column img {
-            width: 100%; /* 图片占据列的全部宽度 */
+            width: 130px; /* 图片占据列的全部宽度 */
             height: auto; /* 高度自动适应 */
         }
         </style>
@@ -49,7 +49,7 @@
 
     <div class="container" style="text-align: left;">
         <div class="left-column">
-            <img src="mi_pic.png" alt="mi_pic" class="responsive-img" width=130px>
+            <img src="mi_pic.png" alt="mi_pic" class="responsive-img">
         </div>
         <div class="right-column">
                 <p><a href="about.html" target="_blank">About me</a>
