--- a/index.html
+++ b/index.html
@@ -6,13 +6,36 @@
         <meta name="description" content="Guannan Mi | academic website">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
-        
+               <style>
+        .large-text {
+            font-size: 36px; /* 设置较大的字体大小 */
+        }  
+          
+        .container {
+            display: flex;
+            flex-direction: row;
+                width: 60%;
+                border: 1px dotted white;
+        }
+        .left-column {
+            flex: 1; /* 占据1/4宽度 */
+            padding: 25px;
+        }
+        .right-column {
+            flex: 3; /* 占据3/4宽度 */
+            padding: 40px;
+        }
+        .left-column img {
+            width: 100%; /* 图片占据列的全部宽度 */
+            height: auto; /* 高度自动适应 */
+        }
+        </style> 
 </head>
 <!-- ************** 以下是页眉的部分，里面包括了导航栏目 ************** -->
 
 <!-- ************** 以下是主体body ************** -->  
 <body>
-
+  
 <div style="text-align: left;">
 <p><span class="large-text">∀<i>x</i> (<i>x</i> is welcome!)</span>
   </p>
@@ -20,8 +43,6 @@
 <br>Heij! I am Guannan Mi. I am currently a master's student at <a href="https://www.illc.uva.nl" target="_blank">ILLC</a>, Amsterdam.
   </p>
 </div>
-
-
 
     <div class="container" style="text-align: left;">
         <div class="left-column">
