--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
       
 </body>
 
-<center><object type="text/html" data="foot.html"></object></center>
+<center>
+© 2024 <a href="https://gnmi.github.io" target="_top" style="color: #FFFFFF; text-decoration: none;">Guannan Mi</a>
+</center>
 
 </html>
