--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         </div>
     </div>
 
-       
-      
-</body>
 
+<p><br>        
 <center>
 © 2024 <a href="https://gnmi.github.io" target="_top" style="color: #FFFFFF; text-decoration: none;">Guannan Mi</a>
-</center>
+</center><p>
+
+</body>
 
 </html>
