--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         </div>
     </div>
 
-
-<center><p>©2024 Guannan Mi</p></center>
+<div style="text-align: center;">
+<p>©2024 Guannan Mi</p>
+</div>
 
 </body>
 
