--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .container {
             display: flex;
             flex-direction: row;
-                width: 100%;
+                width: 60%;
                 border: 1px dotted white;
         }
         .left-column {
@@ -57,7 +57,9 @@
         </div>
     </div>
 
-
+<div style="text-align: center;">
+<p>© 2024 Guannan Mi</p>
+</div>
 
 </body>
 
