--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             display: flex;
             flex-direction: row;
                 width: 100%;
+                margin: 0 auto; /* 使容器居中 */
                 border: 1px dotted white;
         }
         .left-column {
