--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <p><span class="large-text">∀<i>x</i> (<i>x</i> is welcome!)</span>
   </p>
 <p>‘∀<i>x</i>’ means ‘for all <i>x</i>.’
-<br><div class="no-wrap">Heij! I am Guannan Mi. I am currently a master's student at <a href="https://www.illc.uva.nl" target="_blank">ILLC</a>, Amsterdam.</div>
+<br>Heij! I am Guannan Mi. I am currently a master's student at <a href="https://www.illc.uva.nl" target="_blank">ILLC</a>, Amsterdam.
   </p>
 </div>
 
